--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -91,4 +91,13 @@
     position: relative;
     z-index: 2;
   }
+  
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
 }
